# DAPS

./: .gitignore  CITATION.cff  DAPS.ipynb  MANIFEST.in  README.md  RESULTS.md  WHAT.md  base.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_pure_python.py  test_simple.py  tox.ini
.github/workflows/: ci.yml
daps/: __init__.py
daps/core/: INPUT.txt  __init__.py  _daps.h  _daps.html  _daps.pyx  _daps.pyx.bak  _daps_api.h  daps.cpp  daps.py  daps.pyx  function.py  optimizer.py  test_functions.py
docs/: api.md  benchmarks.md  contributing.md  index.md  installation.md  paper.md  visualizations.md
docs/assets/: daps_demo_screenshot.md
docs/interactive/: deployment.md  implementation.md
docs/research/: theory.md
docs/usage/: advanced-config.md  examples.md  getting-started.md  interactive-demo.md
examples/: README.md  basic_example.py  benchmark.py
interactive/: README.md  app.py  requirements.txt  run_demo.bat  run_demo.sh
interactive/.streamlit/: config.toml
paper/: Makefile  README.md  arxiv.sty  build_paper.sh  daps_paper.tex  generate_all_visual_assets.py  generate_figures.py  generate_logo.py  generate_method_diagrams.py  requirements.txt
tests/: test_daps.py  test_multidim.py
